--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,25 @@
 /*  your css code here. If applicable */
+.hero {
+    height: 500px;
+    background: url('https://m.media-amazon.com/images/I/51ZVeRqZvGL._SX3000_.jpg');
+    background-size: 100%; 
+    background-repeat: no-repeat; 
+}
+.product-cards {
+	position: absolute;
+	top: 250px;
+	left: 50px;
+	display:flex;
+}
+.card {
+	width: 300px;
+	height: 300px;
+	background-color: white;
+	box-shadow: 1px 1px 1px black;
+	border: 2px solid red;
+}
+.card img {
+	width: 100px;
+	height: 100px;
+	object-fit: cover;
+}
