--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 .hero-section {
     height: 500px;
     background: url('https://m.media-amazon.com/images/I/51ZVeRqZvGL._SX3000_.jpg');
-    background-size: 100%; 
+    background-size: 100% 100%; 
     background-repeat: no-repeat; 
 }
 .product-cards {
