--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,63 @@
 /*  your css code here. If applicable */
-.hero-section {
-    height: 500px;
-    background: url('https://m.media-amazon.com/images/I/51ZVeRqZvGL._SX3000_.jpg');
-    background-size: 100% 100%; 
-    background-repeat: no-repeat; 
+*{
+	margin:0px;
+	padding:0px;
 }
-.product-cards {
+.hero-section>img{
+	width:100%;
+	height:100%;
+	object-fit:cover;
+}
+.hero-section{
+	height:500px;
+	
+}
+.product-cards{
 	position: absolute;
-	top: 250px;
-	left: 50px;
+    top: 250px;
+    left: 50px;
+    display: flex;
+}
+.product-card{
 	display:flex;
+	flex-direction:column;
+	 width: 300px;
+    height: 300px;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-right: 20px;
+    padding: 10px;
+	align-items:center;
 }
-.product-card {
-	width: 300px;
-	height: 300px;
-	background-color: white;
-	box-shadow: 1px 1px 1px black;
-}
-.product-card img {
+.product-card img{
 	width: 100px;
-	height: 150px;
-	object-fit: cover;
+    height: 150px;
+    object-fit:cover;
+}
+.comment-section {
+    padding: 20px;
+	margin-top:100px
+}
+
+.comment-section h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.comment-section textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.comment {
+    margin-bottom: 10px;
+}
+
+.comment p {
+    font-size: 16px;
+}
+
+.comment strong {
+    font-weight: bold;
 }
